<resources>
    <string name="app_name">Paint</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="hint_name">Put here your name</string>
    <string name="hint_age">Put here your age</string>
    <string name="hint_address">Put here your address</string>
    <string name="save">save</string>
    <string name="toast_data_success">Successfully changed data</string>
    <string name="toast_data_error">Error writing data</string>
</resources>